# TraceGate-Eval

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  RELEASE_NOTES_v0.1.md  RELEASE_NOTES_web_v0.1.md  TraceGate_Eval_Project_Introduction.docx  plan.md  pyproject.toml  requirements.txt  tracegate.yml
docs/: CODEX_FULL_LABEL_AUDIT_REPORT.md  CROSS_PLATFORM_AUDIT.md  DATASET_DISCOVERY.md  DATA_CARD_REAL_MIN.md  DATA_INSUFFICIENT.md  DATA_PROVENANCE.md  EVIDENCE_PACK_ROUND_1.md  EVIDENCE_PACK_ROUND_1.zh-CN.md  FALLBACK_AUDIT.md  FALLBACK_RISK_HANDOFF.md  GITHUB_ACTION.md  HARD_BENCHMARK_STATUS.md  HARD_CASE_LABELING_GUIDE.md  HUMAN_FINAL_CHECKLIST.md  INTERVIEW_NOTES.md  LIMITATIONS.md  MACOS_M5_HANDOFF.md  MACOS_M5_SETUP.md  MAC_BRANCH_PLAN.md  MAC_EXECUTION_PLAN.md  MAC_LOCAL_PRECHECK.md  MANUAL_LABEL_REVIEW_ROUND_1.md  POST_MERGE_STATUS.md  PROJECT_BRIEF.md  PROJECT_OVERVIEW.md  PUBLISH_SAFETY_CHECKLIST.md  REALITY_GUARD.md  RELEASE_NOTES_v0.2-alpha.md  REPO_AUDIT.md  RUNBOOK.md  SEMANTIC_LABEL_SANITY_AUDIT.md  TECHNICAL_DECISIONS.md  WIN_PRECHECK.md  WIN_TO_MAC_HANDOFF_PLAN.md  WIN_TO_MAC_OPEN_QUESTIONS.md  WIN_VALIDATION_RESULT.md  api.md  limitations_and_roadmap.md  metrics.md  project_intro.md  (+1 more)
examples/: active_preserve_tracegate_routed.md  minimal_input.json  minimal_output.md  unknown_verify_first_tracegate_verify_first.md
experiments/: claim_contexts.yaml  claim_models.yaml  claim_tasks.yaml  claims.yaml  context_items.yaml  historical_failures.yaml  stage2_contexts.yaml  stage2_oracles.yaml  stage2_tasks.yaml  tasks.yaml
reports/: report.html  (+4 more)
(+200 files in other folders)
