[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tracegate-eval"
version = "0.1.0"
description = "Evaluate process-context routing for AI coding agents on legacy maintenance tasks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
]

[project.scripts]
tracegate = "tracegate.cli:main"

[tool.setuptools.packages.find]
include = ["tracegate*"]

[tool.setuptools.package-data]
tracegate = ["prompts/templates/*.md", "web/templates/*.html", "web/static/*"]
