[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tracegate-eval"
version = "0.1.0"
description = "Evaluate process-context routing for AI coding agents on legacy maintenance tasks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "fastapi>=0.115",
    "pydantic>=2.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]
plots = [
    "matplotlib>=3.8",
]
all = [
    "httpx>=0.27",
    "matplotlib>=3.8",
    "pytest>=8.0",
]

[project.scripts]
tracegate = "tracegate.cli:main"

[tool.setuptools.packages.find]
include = ["tracegate*"]

[tool.setuptools.package-data]
tracegate = ["prompts/templates/*.md", "web/templates/*.html", "web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
